Text overflow on branch description fixed

--- a/src/assets/styles/styles.less
+++ b/src/assets/styles/styles.less
@@ -117,11 +117,11 @@
     }
 }
 
-.sub-text { // Used on post-tags and post-interact text
+// Used on post-tags and post-interact text
+.sub-text {
     color: @light-grey-text;
     font-size: @small-text;
     font-weight: @regular-font-weight;
-    flex-shrink: 0;
 
     &.link {
         //font-weight: @bold-font-weight;
